src/objects/LegacyContactID__c.object
<CustomObject>
    <description>SFDC1-2208 This custom Object will hold the legacy ID references for migration of contacts</description>
    <fields>
        <fullName>Contact__c</fullName>
        <description>SFDC1-2208 How the new object is related back to the Contact</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Legacy Contact IDs</relationshipLabel>
        <relationshipName>LegacyContactIDs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EmailAddress__c</fullName>
        <description>SFDC1-2208 Legacy email address</description>
        <inlineHelpText>Contact&apos;s email address as displayed originally in the system that it was migrated from</inlineHelpText>
        <label>Email Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FullName__c</fullName>
        <description>SFDC1-2208 legacy full name</description>
        <inlineHelpText>Contact&apos;s name as displayed originally in the system that it was migrated from</inlineHelpText>
        <label>Full Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyIDUnique__c</fullName>
        <description>SFDC1-7046: Legacy ID Unique field is a concatenation of the source system name and a source system record id to ensure record is uniquely identified.</description>
        <externalId>true</externalId>
        <inlineHelpText>This field store the concatenation of the source system name and a source system record id to ensure the record is uniquely identified.</inlineHelpText>
        <label>LegacyIDUnique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <description>SFDC1-7046: Legacy ID field is the system id (unfriendly) referencing the source record.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the system id (unfriendly) referencing the source record and is populated via migrating system</inlineHelpText>
        <label>LegacyID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyReference__c</fullName>
        <description>SFDC1-7046: Legacy Reference field is a friendly system reference to the source record.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is a friendly system reference to the source record.</inlineHelpText>
        <label>LegacyReference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacySystem__c</fullName>
        <description>SFDC1-7046: Legacy System field is a picklist that represents the original system the record came from.</description>
        <inlineHelpText>Name of the CRM system the source record came from</inlineHelpText>
        <label>LegacySystem</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LegacySystem</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PKIDContLegacy__c</fullName>
        <description>SFDC1-2445 : Creating PK field for Data Migration Support</description>
        <displayFormat>CtL{000000}</displayFormat>
        <externalId>true</externalId>
        <label>PKID ContLegacy</label>
        <type>AutoNumber</type>
    </fields>
    <label>Legacy Contact ID</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Legacy Contact IDs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>